<resources>
    <!-- General -->
    <string name="app_name">Whisper To Input</string>
    <string name="enter_text">Enter Text</string>
    <string name="whisper_to_input">Whisper To Input</string>
    <string name="empty_string" />
    <string name="loading">Loading…</string>

    <!-- Keyboard -->
    <string name="recording">Recording…</string>
    <string name="transcribing">Transcribing…</string>
    <string name="start_speech_to_text">Start speech-to-text.</string>
    <string name="start_transcribing">Start transcribing.</string>
    <string name="grant_microphone_permission">Grant Microphone Permission</string>
    <string name="mic_permission_required">Whisper to Input requires microphone permission to work.</string>
    <string name="notification_permission_required">Whisper to Input requires notification permission to work.</string>
    <string name="microphone">Microphone</string>
    <string name="successfully_set">Successfully set!</string>
    <string name="backspace_button_hint">Backspace Button</string>
    <string name="btn_previous_ime_hint">Switch To Previous Input Method</string>
    <string name="generate_logcat">Generate Recent Logcat</string>

    <!-- Warning and Error Messages -->
    <string name="error_endpoint_unset">Error: Endpoint is not set in settings.</string>
    <string name="error_apikey_unset">Error: OpenAI API Key is not set in settings.</string>

    <!-- Settings -->
    <string name="whisper_to_input_settings_title">Whisper To Input Settings</string>
    <string name="settings_btn_apply">Apply</string>
    <string name="settings_request_style">Request Style</string>
    <string name="settings_request_style_desc">Use the official OpenAI API or Whisper Webservice request style.</string>
    <string name="settings_option_openai_api">OpenAI API</string>
    <string name="settings_option_openai_api_default_endpoint">https://api.openai.com/v1/audio/transcriptions</string>
    <string name="settings_option_whisper_webservice">Whisper Webservice</string>
    <string-array name="settings_request_style_array">
        <item>@string/settings_option_openai_api</item>
        <item>@string/settings_option_whisper_webservice</item>
    </string-array>
    <string name="settings_endpoint">Endpoint</string>
    <string name="settings_endpoint_desc">The host and port for the OpenAI API or Whisper Webservice endpoint.</string>
    <string name="settings_endpoint_hint"><![CDATA[e.g., http://<host>:<port>/asr]]></string>
    <string name="settings_language_code">Language Code</string>
    <string name="settings_language_code_desc">The language code to be included in the request payload (e.g., en, zh).</string>
    <string name="settings_language_code_hint">Enter Language Code (e.g., en, zh)</string>
    <string name="settings_api_key">API Key</string>
    <string name="settings_api_key_desc">The official OpenAI API Key to be used in requests.</string>
    <string name="settings_api_key_hint">Enter OpenAI API Key…</string>
    <string name="settings_prompt">Prompt</string>
    <string name="settings_prompt_desc">An optional text to guide the model\'s style or continue a previous audio segment.</string>
    <string name="settings_prompt_hint">Enter prompt text (optional)…</string>
    <string name="settings_auto_recording_start">Auto Recording Start</string>
    <string name="settings_auto_recording_start_desc">Whether to automatically start recording upon opening the keyboard.</string>
    <string name="settings_option_yes">Yes</string>
    <string name="settings_option_no">No</string>
    <string-array name="settings_auto_recording_start_array">
        <item>@string/settings_option_yes</item>
        <item>@string/settings_option_no</item>
    </string-array>
    <string name="desc_space_bar">Space Bar</string>

</resources>